<resources>
    <string name="app_name">Элитное расписание</string>
    <string name="schedule">Пары</string>
    <string name="bell">Звонки</string>
    <string name="action_settings">Кек</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="monday">Понедельник</string>
    <string name="monday1">1. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="monday2">2. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="monday3">3. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="tuesday">Вторник</string>
    <string name="tuesday1">1. Основы экономического учета (38 кабинет)</string>
    <string name="tuesday2">2. Иностранный язык (36 кабинет)</string>
    <string name="tuesday3">3. Основы экономического учета (38 кабинет)</string>
    <string name="wednesday">Среда</string>
    <string name="wednesday1">1. Физическая культура (Нет 🌚)</string>
    <string name="wednesday2">2. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="wednesday3">3. Оформление НТД (43 кабинет)</string>
    <string name="thursday">Четверг</string>
    <string name="thursday1">2. МДК 03.01 Серкова (23 кабинет)</string>
    <string name="thursday2">3. МДК 03.01 Серкова (23 кабинет)</string>
    <string name="thursday3">4. МДК 03.01 Серкова (23 кабинет)</string>
    <string name="friday">Пятница</string>
    <string name="friday1">1. Оформление НТД (43 кабинет)</string>
    <string name="friday2">2. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="friday3">3. МДК 02.01 / МДК 03.01</string>
    <string name="saturday">Суббота</string>
    <string name="saturday1">1. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="saturday2">2. МДК 02.01 Сырецкий (31 кабинет)</string>
    <string name="saturday3">3. МДК 03.01 Серкова (23 кабинет)</string>
    <string name="firstshift">1 смена</string>
    <string name="period1">1 пара</string>
    <string name="period2">2 пара</string>
    <string name="period3">3 пара</string>
    <string name="period4">4 пара</string>
    <string name="period5">5 пара</string>
    <string name="period6">6 пара</string>
    <string name="firstperiod1">08:00 - 08:45</string>
    <string name="firstperiod2">08:50 - 09:35</string>
    <string name="secondperiod1">09:45 - 10:30</string>
    <string name="secondperiod2">10:35 - 11:20</string>
    <string name="dinnerfs">Обед 1 смены 11:20 - 11:50</string>
    <string name="thirdperiod1">11:50 - 12:35</string>
    <string name="thirdperiod2">12:40 - 13:25</string>
    <string name="secondshift">2 смена</string>
    <string name="fourthperiod1">13:35 - 14:20</string>
    <string name="fourthperiod2">14:25 - 15:10</string>
    <string name="dinnerss">Обед 2 смены 15:30 - 15:40</string>
    <string name="fifthperiod1">15:40 - 16:25</string>
    <string name="fifthperiod2">16:30 - 17:15</string>
    <string name="sixthperiod1">17:25 - 18:10</string>
    <string name="sixthperiod2">18:15 - 19:00</string>

    <string name="thursdayfirstshift">1 смена - Четверг</string>
    <string name="thursdayperiod1">1 пара</string>
    <string name="thursdayperiod2">2 пара</string>
    <string name="thursdayperiod3">3 пара</string>
    <string name="thursdayperiod4">4 пара</string>
    <string name="thursdayperiod5">5 пара</string>
    <string name="thursdayperiod6">6 пара</string>
    <string name="thursdayfirstperiod1">08:00 - 08:45</string>
    <string name="thursdayfirstperiod2">08:50 - 09:35</string>
    <string name="thursdaysecondperiod1">09:45 - 10:30</string>
    <string name="thursdaysecondperiod2">10:35 - 11:20</string>
    <string name="thursdaydinnerfs">Обед 1 смены 11:20 - 11:45</string>
    <string name="thursdaythirdperiod1">11:45 - 12:30</string>
    <string name="thursdaythirdperiod2">12:35 - 13:20</string>
    <string name="thursdaysecondshift">2 смена</string>
    <string name="thursdayfourthperiod1">14:10 - 14:55</string>
    <string name="thursdayfourthperiod2">15:00 - 15:45</string>
    <string name="thursdaydinnerss">Обед 2 смены 15:45 - 16:10</string>
    <string name="thursdayfifthperiod1">16:10 - 16:55</string>
    <string name="thursdayfifthperiod2">17:00 - 17:45</string>
    <string name="thursdaysixthperiod1">17:55 - 18:40</string>
    <string name="thursdaysixthperiod2">18:45 - 19:30</string>
</resources>
