<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarSize="2dip"
    android:scrollbarThumbVertical="@android:color/white"
    tools:context=".schedule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/Monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/monday"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/monday1"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/monday2"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/monday3"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/tuesday"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/tuesday1"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/tuesday2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/tuesday3"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/wednesday"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/wednesday1"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/wednesday2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/wednesday3"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/thursday"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/thursday1"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/thursday2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/thursday3"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/friday"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/friday1"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/friday2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/friday3"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/saturday"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:padding="8dp"
                android:text="@string/saturday1"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:padding="8dp"
                android:text="@string/saturday2"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:padding="8dp"
                android:text="@string/saturday3"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>